<resources>
    <string name="app_name">Cash10</string>
    <string name="lang">en</string>
    <string name="subtitle">Best App for Earn Cash</string>
    <string name="lets_start">Lets Start</string>
    <string name="item_three">Instantly Notifications</string>
    <string name="title_item_three">Notifications</string>
    <string name="item_two">Lots of Paymnet Type</string>
    <string name="title_item_two">Payment Option</string>
    <string name="item_one">Same day get your money!</string>
    <string name="title_item_one">Warranty Payment</string>
    <string name="enter_phone_number">Please Enter Your Phone Number</string>
    <string name="enter_code">Please Enter Your Enter Code</string>
    <string name="slogan">Why Us ?</string>
    <string name="send_message">Send Message</string>
    <string name="accept">Validate</string>
    <string name="sending">Message Sending</string>
    <string name="sended">Message Sended</string>
    <string name="error">Opps Error</string>
    <string name="error_phone">Wrong Number</string>
    <string name="error_code">Opps Not Correct Try Again!</string>
    <string name="whelling">Turning</string>
    <string name="play">Turn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget password?</string>
    <string name="mail_error">Enter Email</string>
    <string name="pass_error">Enter Password</string>
    <string name="email">Email</string>
    <string name="set_phone">Add Phone</string>
    <string name="menu">Menu</string>
    <string name="menuinfo">Fast Accesable Menu</string>
    <string name="cevir_kazan">Turn&amp;Win</string>
    <string name="referans">Reference</string>
    <string name="watchwin">Watch&amp;Win</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="slot">Slot</string>
    <string name="setting">Setting</string>
    <string name="diger">Other</string>
    <string name="otherinfo">Other Things</string>
    <string name="getpay">Paying</string>
    <string name="bankinfo">Bank</string>
    <string name="games">Games</string>
    <string name="gameinfo">Earn faster by playing this games</string>
    <string name="diceroll">Dice Rolling</string>
    <string name="rulet">Rulet</string>
    <string name="toss">Toss Coin</string>
    <string name="notif">Notifs</string>
    <string name="flip">Flip Coin</string>
    <string name="info">Info</string>
    <string name="info_whell">Turn wheel and get point from the value up to!</string>
    <string name="info_dice">Guess dices and get 100 point for every true!</string>
    <string name="info_coin">Head or Toss guess and get 100 point!</string>
    <string name="info_rulet">Black and Red 100 point but Green 200 point!</string>
    <string name="info_slot">Press 3 times stop button if 2 pic are same get 100 but if 3 pic are
        same get 200 point!</string>
    <string name="paymethode">1) Payment Type</string>
    <string name="mesaj">Message</string>
    <string name="send">Send</string>
    <string name="extramsj">2) Information</string>
    <string name="bilgi">Hesap bilgilerinizi eksiksiz bir şekilde yazınız. Ayrıca eklemek istediğiniz bişeyi de yazabilirsiniz.</string>
    <string name="hesap">Iban Numaranız / Bilgileriniz...</string>
    <string name="banka">2) Gerekli Bilgileri Giriniz</string>
    <string name="ad">Name</string>
    <string name="mail">Email</string>
    <string name="tarih">Date</string>
    <string name="usermsj">Üye Mesajı</string>
    <string name="tel">Telephone</string>
    <string name="metod">Ödeme Şekli</string>
    <string name="adminmsj">Admin Mesajı</string>
    <string name="iptal">İptal</string>
    <string name="onayla">Onayla</string>
    <string name="mailtel">EMail/Telefon</string>

    <string name="faillogin">Fail Login</string>

    <string name="succes">Succes</string>
    <string name="market">Elmas Marketi</string>
    <string name="ref">Referans</string>
    <string name="refkod">Referans Kodunu Giriniz</string>
    <string name="reff">Ref.</string>
    <string name="kodunuz">Kodunuz:</string>

</resources>
